cluster/dizambee/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dizambee-frontend
    component: frontend
    part-of: beehive
    project: dizambee
    confidentiality: not-defined
    compliance: not-defined
  name: dizambee-frontend
  namespace: dizambee
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: dizambee-frontend
  template:
    metadata:
      labels:
        app: dizambee-frontend
        component: frontend
        part-of: beehive
        project: dizambee
        confidentiality: not-defined
        compliance: not-defined
    spec:
      imagePullSecrets:
        - name: gitlab-deploy-key-dizambee
      containers:
        - name: webserver
          image: registry.login.no/tekkom/web/beehive/dizambee/frontend:0.0.2-dev@sha256:753bf0f6dba936635d35098121609d4c8044e03556fd3bd6397b36be62eb59ed
          imagePullPolicy: IfNotPresent
          command:
            - npm
            - start
          ports:
            - containerPort: 3000
              name: 3000tcp
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 3000
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 3000
          #   initialDelaySeconds: 30
          #   periodSeconds: 5
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - dizambee-frontend
              topologyKey: kubernetes.io/hostname
